Edited metadata: no cell is editable

--- a/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb
@@ -121,7 +121,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": false,
+    "scrolled": false
+   },
    "source": [
     "![title](my-experiments.png)"
    ]
@@ -148,7 +151,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": false,
+    "scrolled": false
+   },
    "source": [
     "![title](launch.png)"
    ]
@@ -190,7 +196,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": false,
+    "scrolled": false
+   },
    "source": [
     "__A.2.2 Hints for *laser_sensors_transmit.py*__\n",
     "\n",
@@ -301,6 +310,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "editable": false,
     "scrolled": true
    },
    "outputs": [],
@@ -396,7 +406,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": false,
+    "scrolled": false
+   },
    "source": [
     "--------------------------------------\n",
     "__B.5.__ Stop the simulation\n",
@@ -479,6 +492,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "editable": false,
     "scrolled": false
    },
    "outputs": [],
@@ -510,7 +524,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": false,
+    "scrolled": false
+   },
    "source": [
     "__C.2.__ Retrieve the latest recorded robot positions from the NRP storage."
    ]
@@ -519,6 +536,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "editable": false,
     "scrolled": true
    },
    "outputs": [],
@@ -546,7 +564,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": false,
+    "scrolled": false
+   },
    "source": [
     "__C.3.__ Stop the simulation"
    ]
@@ -554,7 +575,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": false
+   },
    "outputs": [],
    "source": [
     "sim.stop()"
@@ -562,7 +585,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": false,
+    "scrolled": false
+   },
    "source": [
     "--------------------------------------------\n",
     "\n",
@@ -572,14 +598,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": false,
+    "scrolled": false
+   },
    "source": [
     "In this section, you only need to execute each cell in order to visualize the recorded robot positions."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": false,
+    "scrolled": false
+   },
    "source": [
     "**D.1.** Transform the latest recorded positions"
    ]
@@ -587,7 +619,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": false
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -609,7 +643,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": false,
+    "scrolled": false
+   },
    "source": [
     "**D.2.** Visualization: recorded robot positions as exploration data."
    ]
@@ -618,6 +655,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "editable": false,
     "scrolled": false
    },
    "outputs": [],
@@ -649,7 +687,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
