Revises mainly exercise2.ipynb after complete test (doing the exercise like a student would)

--- a/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb
@@ -368,12 +368,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "006546e718374567b0d4ac42922e9fd6",
+       "model_id": "2a3154bf60d84e6f8e7bb60db3e7c83c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Text(value=u'', description=u'Experiment name', layout=Layout(width=u'50%'), placeholder=u'Copy here the name …"
+       "Text(value=u'', description=u'Experiment name', layout=Layout(width=u'50%'), placeholder=u'Copy here the exper…"
       ]
      },
      "metadata": {},
