--- a/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb
@@ -75,7 +75,7 @@
     "scrolled": true
    },
    "source": [
-    "- Join the [Neurorobotics Platform](http://148.187.96.224/#/esv-private?dev) and select the *Templates* tab. Your browser view is depicted below."
+    "- Join the [Neurorobotics Platform](http://148.187.96.224/#/esv-private?dev) and select the ***Templates*** tab. Your browser view is depicted below."
    ]
   },
   {
@@ -687,6 +687,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
