Fixes issues with python code that causes import failure in the submission process

--- a/Neurorobotics_MOOC_initialization/notebooks/exercise2.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise2.ipynb
@@ -389,7 +389,7 @@
    "source": [
     "#%%writefile SOM_solution.py \n",
     "\n",
-    "# SOM class (SOM_solution)\n",
+    "# SOM class\n",
     "import numpy as np\n",
     "import random\n",
     "import time\n",
