Fixes python code issues causing submission failures

--- a/Neurorobotics_MOOC_initialization/notebooks/exercise2.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise2.ipynb
@@ -183,9 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "editable": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Utility function used to save files into your Collab storage\n",
@@ -204,11 +202,11 @@
     "    collab_path = get_collab_storage_path()\n",
     "    filename = path.basename(filepath)\n",
     "    if os.path.isfile(filename):\n",
+    "        print('Saving ...')\n",
     "        # remove the previous version, if it exists\n",
     "        filepath = os.path.join(collab_path, filename)\n",
     "        if clients.storage.exists(filepath): \n",
     "            clients.storage.delete(filepath)\n",
-    "        print('Saving ...')\n",
     "        pydata = clients.storage.upload_file(filename, filepath, filetype)\n",
     "        print(\"The file %(filename)s has been successfully saved to %(filepath)s\" % {\"filename\": filename, \"filepath\": filepath})\n",
     "        # remove \n",
@@ -310,16 +308,17 @@
     "\n",
     "</br><div style=\"text-align: justify\">We start with constant parameters of the SOM algorithms. The first set of parameters is made of **non-editable parameters** used for the visualization of the training process. <font color=blue>**The second set of parameters is to be initialized by yourself**</font>. \n",
     "\n",
-    "**Remark:** Do not change any prescribed function name. Function names are required to be untouched in the submission step. </dev> \n",
+    "**Remark:** Do not change any prescribed function name. Function names are required to be untouched in the submission step. \n",
+    "</div> \n",
     "\n",
     "\n",
-    "</br><div style=\"text-align: justify\">Here is the parameter list:   </dev> \n",
+    "</br><div style=\"text-align: justify\">Here is the parameter list:   </div> \n",
     "<br>\n",
-    " - **`self.display`:**</font> the visualization option (`'simulation'` to simulate and show only the final lattice, or `'visualization'` to watch all phases).<br>\n",
-    " - **`self.csv_file`:**</font> the name of the input file (`robot_positions.csv`).<br>\n",
-    " - **`self.pos`:**</font> the robot positions extracted from the input file.<br>\n",
-    " - **`self.lattice`:**</font> the initial SOM lattice, to be randomly initialized.<br>\n",
-    " - **`self.trial`:**</font> the index of the current trial (the initial value is 0).<br>\n",
+    " - **`self.display`:** the visualization option (`'simulation'` to simulate and show only the final lattice, or `'visualization'` to watch all phases).<br>\n",
+    " - **`self.csv_file`:** the name of the input file (`robot_positions.csv`).<br>\n",
+    " - **`self.pos`:** the robot positions extracted from the input file.<br>\n",
+    " - **`self.lattice`:** the initial SOM lattice, to be randomly initialized.<br>\n",
+    " - **`self.trial`:** the index of the current trial (the initial value is 0).<br>\n",
     "<br>\n",
     " - <font color=blue>**self.Nn:**</font> SOM lattice size [_Nn_ x _Nn_].<br>\n",
     " - <font color=blue>**self.eta_0:**</font> the **initial** value of the learning-rate parameter (Formula 9.14 of [1]). <br>\n",
@@ -454,7 +453,7 @@
     "\t#########################################\n",
     "\n",
     "\tdef run_trial(self):\n",
-    "\t\tmix = self.data_mix();\n",
+    "\t\tmix = self.shuffle_data();\n",
     "\t\tfor i in range(self.pos.shape[0]):\n",
     "\t\t\tself.run_episode(mix, i)\n",
     "\n",
