--- a/Neurorobotics_MOOC_initialization/notebooks/exercise3.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise3.ipynb
@@ -176,11 +176,11 @@
     "    collab_path = get_collab_storage_path()\n",
     "    filename = path.basename(filepath)\n",
     "    if os.path.isfile(filename):\n",
+    "        print('Saving ...')\n",
     "        # erase old version of the file if it exists\n",
     "        filepath = os.path.join(collab_path, filename)\n",
     "        if clients.storage.exists(filepath): \n",
     "            clients.storage.delete(filepath)\n",
-    "        print('Saving ...')\n",
     "        pydata = clients.storage.upload_file(filename, filepath, filetype)\n",
     "        print(\"The file %(filename)s has been successfully saved to %(filepath)s\" % {\"filename\": filename, \"filepath\": filepath})\n",
     "        # remove from Jupyter notebook space, if requested\n",
@@ -462,7 +462,7 @@
     "class SARSA:\n",
     "\n",
     "    #############################################################################################################\n",
-    "    #                              State–action–reward–state–action initialization                              #\n",
+    "    #                                 SARSA algorithm with eligibility trace                                    #\n",
     "    #############################################################################################################\n",
     "\n",
     "    def __init__(self, \n",
