Replaces relative paths to pictures by URLs

--- a/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb
@@ -48,11 +48,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": true
    },
    "source": [
-    "![title](nrp.png)"
+    "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/templates.png)"
    ]
   },
   {
@@ -81,11 +80,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": true
    },
    "source": [
-    "![title](templates.png)"
+    "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/templates.png)"
    ]
   },
   {
@@ -102,11 +100,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": true
    },
    "source": [
-    "![title](clone.png)"
+    "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/clone.png)"
    ]
   },
   {
@@ -122,11 +119,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": false
    },
    "source": [
-    "![title](my-experiments.png)"
+    "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/my-experiments.png)"
    ]
   },
   {
@@ -152,22 +148,20 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": false
    },
    "source": [
-    "![title](launch.png)"
+    "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/launch.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": true
    },
    "source": [
     " Open then the [*Transfer Function Editor*](https://developer.humanbrainproject.eu/docs/projects/HBP%20Neurorobotics%20Platform/2.0/nrp/user_manual/user_interface/edit/7-gz3d-tf-editor.html) by pressing the following button:\n",
-    "![title](tf-icon.png)\n",
+    "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/tf-icon.png)\n",
     "\n",
     "Then edit the files *velocity_commands.py* and *laser_sensors_transmit.py*. Follow the comments left in the code and tweak the values of the parameters `lin_max`, `lin_factor` and `ang_factor` in the first file, and the values of `idx_right`, `x_0` and `y_0` in the second file until the robot starts exploring its environment while avoiding obstacles."
    ]
@@ -175,11 +169,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": true
    },
    "source": [
-    "![title](tf-editor.png)"
+    "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/tf-editor.png)"
    ]
   },
   {
@@ -210,7 +203,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": true
    },
    "source": [
@@ -218,21 +210,20 @@
     "\n",
     "Press the **Log Console** button to see the logs printed by commands of the type `clientLogger.info('some useful information'))`:\n",
     "\n",
-    "![title](log-console-icon.png)\n",
-    "![title](log-console.png)"
+    "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/log-console-icon.png)\n",
+    "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/log-console.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": true
    },
    "source": [
     "### A.3. Move automatically the robot when it gets stuck\n",
     "Open the [SMACH Script Editor](https://developer.humanbrainproject.eu/docs/projects/HBP%20Neurorobotics%20Platform/2.0/nrp/user_manual/user_interface/edit/7-gz3d-edit-simulation.html) by pressing on the following button:\n",
-    "![title](smach-editor-icon.png)\n",
-    "![title](smach-editor.png)\n"
+    "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/smach-editor-icon.png)\n",
+    "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/smach-editor.png)\n"
    ]
   },
   {
