Improves comments in Exercises 2 and 3

--- a/Neurorobotics_MOOC_initialization/notebooks/exercise2.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise2.ipynb
@@ -531,7 +531,9 @@
     "```python\n",
     "som = SOM(mode_name) # instantiate your SOM class (replace mode_name for 'simulation' or 'visualization')\n",
     "som.run_som() # run simulation\n",
-    "```"
+    "```\n",
+    "`'simulation'` mode doesn't provide with any visualization;<br>\n",
+    "`'visualization'` mode provides with visualization of SOM deployment state after every trial."
    ]
   },
   {
