--- a/Neurorobotics_MOOC_initialization/notebooks/exercise3.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise3.ipynb
@@ -231,7 +231,8 @@
     "\n",
     "- 2 images wich represent the transformation from Cartesian coordinates to SOM-lattice coordinates.\n",
     "- your selected goal location `[vertical,horizontal]` in the SOM-lattice coordinates.\n",
-    "- the `actions` table with an array-like structure `[N,N, A(x,y)]`, where `N` is the size of the SOM-lattice. For each state `[x,y]`, `actions[x, y]` is a list of `A(x,y)` <= 4 actions (`0` - Down, `1` - Up, `2` - Right, `3` - Left)."
+    "- the `actions` table with an array-like structure `[N,N, A(x,y)]`, where `N` is the size of the SOM-lattice. For each state `[x,y]`, `actions[x, y]` is a list of `A(x,y)` <= 4 actions (`0` - Down, `1` - Up, `2` - Right, `3` - Left).\n",
+    "<a id='viz'></a>"
    ]
   },
   {
@@ -708,7 +709,12 @@
     "```python\n",
     "sarsa = SARSA(display='simulation') # upload SARSA (possible values of display: 'simulation', 'environment', 'square_maze', 'latency')\n",
     "sarsa.run_sarsa() # run simulation\n",
-    "```"
+    "```\n",
+    "`'simulation'` mode doesn't provide with any visualization;<br>\n",
+    "`'environment'` mode provides with visualization of robot displacement within [real environment](#viz) after every step;<br>\n",
+    "`'square_maze'` mode provides with visualization of robot displacement within [square maze](#viz) representing real environment after every step;<br>\n",
+    "`'latency'` mode provides with plotting of robot latency (number of taken steps) to come to the goal state after every episode (plot update happens every 1000 episodes).<br>\n",
+    "**Remark:** `'environment'` and `'square_maze'` are very consuming time mode recommended only at beginning stage to be sure that robot displaces correctly between states."
    ]
   },
   {
