Improves the dialog allowing files download at the beginning of Exercises 2 and 3

--- a/Neurorobotics_MOOC_initialization/notebooks/exercise2.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise2.ipynb
@@ -127,48 +127,86 @@
     "scrolled": true
    },
    "source": [
-    "### A.2. Download the csv input file from Collab <span style=\"background-color: #f6d351\">Storage</span> <a id='A2'></a>\n",
-    "Run the cell below to download the input data."
+    "### A.2. Download the csv input file from your Collab <span style=\"background-color: #f6d351\">Storage</span> <a id='A2'></a>\n",
+    "Run the two cells below in order to download the input data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import ipywidgets as widgets\n",
-    "from IPython.display import display\n",
-    "style = {'description_width': 'initial'}\n",
-    "input_file_widget = widgets.Text(\n",
-    "    description='Filename of your robot positions CSV file', \n",
-    "    placeholder='./robot_positions.csv (default)',\n",
-    "    style=style,\n",
-    "    layout=widgets.Layout(width='50%')\n",
-    ")\n",
-    "display(input_file_widget)"
+    "# Download a selected file from your Collab Storage\n",
+    "def download_from_collab_storage(filename, default):\n",
+    "    print('Downloading...')\n",
+    "    clients = get_hbp_service_client()\n",
+    "    collab_path = get_collab_storage_path()\n",
+    "    if not filename:\n",
+    "        filename = default\n",
+    "    if not filename: \n",
+    "        raise ValueError('Missing filename argument')\n",
+    "    from os import path\n",
+    "    try:\n",
+    "        clients.storage.download_file(path.join(collab_path, filename), './%(filename)s' % { 'filename': filename})\n",
+    "        print('The file \\'%(filename)s\\' has been successfully downloaded. It is located here: ./%(filename)s' % { 'filename': filename})\n",
+    "    except Exception:\n",
+    "        print('The file \\'%(filename)s\\' couldn\\'t be found in your storage.' % { 'filename': filename})\n",
+    "        \n",
+    "def display_file_widget(default_filename):\n",
+    "    import ipywidgets as widgets\n",
+    "    from IPython.display import display\n",
+    "    style = {'description_width': 'initial'}\n",
+    "    input_file_widget = widgets.Text(\n",
+    "        description='Filename', \n",
+    "        placeholder='%(default_filename)s (default)' % {'default_filename': default_filename},\n",
+    "        style=style,\n",
+    "        layout=widgets.Layout(width='50%')\n",
+    "    )\n",
+    "    display(input_file_widget)\n",
+    "    download_button = widgets.Button(description=\"Download\")\n",
+    "    display(download_button)\n",
+    "    def button_callback(b):\n",
+    "        return download_from_collab_storage(filename=input_file_widget.value, default=default_filename)\n",
+    "    download_button.on_click(button_callback)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "00b653487be8420bbaaf8209fa6ff237",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value=u'', description=u'Filename', layout=Layout(width=u'50%'), placeholder=u'robot_positions.csv (defau…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "90944cef6b8a4695b26e06ec9bb81d40",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description=u'Download', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Download the default robot_positions.csv file from this Collab's Storage\n",
-    "clients = get_hbp_service_client()\n",
-    "collab_path = get_collab_storage_path()\n",
-    "filename = input_file_widget.value\n",
-    "if not filename: \n",
-    "    filename = 'robot_positions.csv'\n",
-    "from IPython.display import clear_output\n",
-    "clear_output()\n",
-    "from os import path\n",
-    "clients.storage.download_file(path.join(collab_path, filename), './robot_positions.csv')"
+    "display_file_widget('robot_positions.csv')"
    ]
   },
   {
@@ -196,13 +234,13 @@
     ":param remove: remove the file of the Jupyter notebook space if True \n",
     "\"\"\"\n",
     "def save_to_collab_storage(filepath, filetype, remove=False):\n",
+    "    print('Saving ...')\n",
     "    import os\n",
     "    from os import path\n",
     "    clients = get_hbp_service_client()\n",
     "    collab_path = get_collab_storage_path()\n",
     "    filename = path.basename(filepath)\n",
     "    if os.path.isfile(filename):\n",
-    "        print('Saving ...')\n",
     "        # remove the previous version, if it exists\n",
     "        filepath = os.path.join(collab_path, filename)\n",
     "        if clients.storage.exists(filepath): \n",
