--- a/Neurorobotics_MOOC_initialization/notebooks/exercise3.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise3.ipynb
@@ -118,6 +118,7 @@
    "source": [
     "# Download a selected file from your Collab Storage\n",
     "def download_from_collab_storage(filename, default):\n",
+    "    print('Downloading...')\n",
     "    clients = get_hbp_service_client()\n",
     "    collab_path = get_collab_storage_path()\n",
     "    if not filename:\n",
@@ -125,13 +126,15 @@
     "    if not filename: \n",
     "        raise ValueError('Missing filename argument')\n",
     "    from os import path\n",
-    "    response = clients.storage.download_file(path.join(collab_path, filename), './%(filename)s' % { 'filename': filename})\n",
-    "    if response is None:\n",
+    "    try:\n",
+    "        clients.storage.download_file(path.join(collab_path, filename), './%(filename)s' % { 'filename': filename})\n",
     "        print('The file \\'%(filename)s\\' has been successfully downloaded. It is located here: ./%(filename)s' % { 'filename': filename})\n",
+    "    except Exception:\n",
+    "        print('The file \\'%(filename)s\\' couldn\\'t be found in your storage.' % { 'filename': filename})\n",
+    "        \n",
     "\n",
-    "def display_file_widget(default_filename):\n",
+    "def create_file_widget(default_filename):\n",
     "    import ipywidgets as widgets\n",
-    "    from IPython.display import display\n",
     "    style = {'description_width': 'initial'}\n",
     "    input_file_widget = widgets.Text(\n",
     "        description='Filename', \n",
@@ -139,11 +142,22 @@
     "        style=style,\n",
     "        layout=widgets.Layout(width='50%')\n",
     "    )\n",
-    "    display(input_file_widget)\n",
+    "    return input_file_widget\n",
+    "        \n",
+    "def display_file_widgets(default_filenames):\n",
+    "    import ipywidgets as widgets\n",
+    "    from IPython.display import display\n",
+    "    input_file_widgets = []\n",
+    "    for default_filename in default_filenames:\n",
+    "        input_file_widget = create_file_widget(default_filename)\n",
+    "        display(input_file_widget) \n",
+    "        input_file_widgets.append(input_file_widget)\n",
+    "    \n",
     "    download_button = widgets.Button(description=\"Download\")\n",
     "    display(download_button)\n",
     "    def button_callback(b):\n",
-    "        return download_from_collab_storage(filename=input_file_widget.value, default=default_filename)\n",
+    "        for fw, df in zip(input_file_widgets, default_filenames):\n",
+    "            download_from_collab_storage(filename=str(fw.value), default=df)\n",
     "    download_button.on_click(button_callback)"
    ]
   },
@@ -151,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A.3 Utility functions to save files into Collab <span style=\"background-color: #f6d351\">Storage</span> <a id='A3'>"
+    "### A.3 Utility function to save files into Collab <span style=\"background-color: #f6d351\">Storage</span> <a id='A3'>"
    ]
   },
   {
@@ -167,16 +181,16 @@
     "\n",
     ":param filepath: relative path to the file\n",
     ":param filetype: type of the file, e.g., 'text/csv' or 'text/x-python'\n",
-    ":param remove: remove the file of the Jupyter notebook space if True \n",
+    ":param remove: remove the file from the Jupyter notebook space if True \n",
     "\"\"\"\n",
     "def save_to_collab_storage(filepath, filetype, remove=False):\n",
+    "    print('Saving ...')\n",
     "    import os\n",
     "    from os import path\n",
     "    clients = get_hbp_service_client()\n",
     "    collab_path = get_collab_storage_path()\n",
     "    filename = path.basename(filepath)\n",
     "    if os.path.isfile(filename):\n",
-    "        print('Saving ...')\n",
     "        # erase old version of the file if it exists\n",
     "        filepath = os.path.join(collab_path, filename)\n",
     "        if clients.storage.exists(filepath): \n",
@@ -195,7 +209,7 @@
    "metadata": {},
    "source": [
     "### A.4. Download robot positions and SOM lattice from your Collab <span style=\"background-color: #f6d351\">Storage</span> <a id='A4'></a>\n",
-    "Run the following cells to download the robot positions and the SOM lattice from your Collab <span style=\"background-color: #f6d351\">Storage</span>."
+    "Run the following cell to download the robot positions and the SOM lattice from your Collab <span style=\"background-color: #f6d351\">Storage</span>."
    ]
   },
   {
@@ -206,8 +220,7 @@
    "source": [
     "from IPython.display import clear_output\n",
     "clear_output()\n",
-    "file_widget = display_file_widget('robot_positions.csv')\n",
-    "file_widget = display_file_widget('lattice.csv')"
+    "display_file_widgets(['robot_positions.csv', 'lattice.csv'])"
    ]
   },
   {
